--- a/week02/Text_Generation_RNN.ipynb
+++ b/week02/Text_Generation_RNN.ipynb
@@ -654,9 +654,7 @@
     "id": "RkA5upJIJ7W7"
    },
    "source": [
-    "For each character the model looks up the embedding, runs the GRU one timestep with the embedding as input, and applies the dense layer to generate logits predicting the log-liklihood of the next character:\n",
-    "\n",
-    "![A drawing of the data passing through the model](https://tensorflow.org/tutorials/sequences/images/text_generation_training.png)"
+    "For each character the model looks up the embedding, runs the GRU one timestep with the embedding as input, and applies the dense layer to generate logits predicting the log-liklihood of the next character:"
    ]
   },
   {
@@ -842,7 +840,6 @@
    "source": [
     "def loss(labels, logits):\n",
     "  return tf.keras.losses.sparse_categorical_crossentropy(labels, logits, from_logits=True)\n",
-    "#   return tf.nn.sparse_softmax_cross_entropy_with_logits(labels=labels, logits=logits) # TF 1.12\n",
     "\n",
     "example_batch_loss  = loss(target_example_batch, example_batch_predictions)\n",
     "print(\"Prediction shape: \", example_batch_predictions.shape, \" # (batch_size, sequence_length, vocab_size)\") \n",
@@ -1123,8 +1120,7 @@
    },
    "outputs": [],
    "source": [
-    "print(generate_text(model, start_string=u\"ROMEO\"))\n",
-    "# print(generate_text(model, start_string=u\"Art\"))\n"
+    "print(generate_text(model, start_string=u\"ROMEO\"))\n"
    ]
   },
   {
@@ -1155,8 +1151,9 @@
     "  - How does changing the number of RNN units (internal \"nodes\" in the LSTM) change the results? By default we have ```rnn_units = 1024```\n",
     "  - Does changing the length of training sequences ```seq_length = 100``` change the results? \n",
     "  - Add a new layer to your network (copy the rnn statement in the model construction)\n",
-    "4. Move on to a word-level RNN model (like this https://github.com/hunkim/word-rnn-tensorflow)\n",
-    "5. Move on to fine-tuning the GPT-2 model (https://github.com/nshepperd/gpt-2, https://pmbaumgartner.github.io/blog/gpt2-jokes/)"
+    "4. Future directions: \n",
+    "  - Move on to a word-level RNN model (like this https://github.com/hunkim/word-rnn-tensorflow)\n",
+    "  - Move on to fine-tuning the GPT-2 model (https://github.com/nshepperd/gpt-2, https://pmbaumgartner.github.io/blog/gpt2-jokes/)"
    ]
   },
   {
