week02/gpt-2-finetuning.ipynb

--- a/week02/Text_Generation_RNN.ipynb
+++ b/week02/Text_Generation_RNN.ipynb
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -143,7 +143,7 @@
     "from __future__ import absolute_import, division, print_function\n",
     "\n",
     "import tensorflow as tf\n",
-    "tf.enable_eager_execution()\n",
+    "# tf.enable_eager_execution()\n",
     "\n",
     "import numpy as np\n",
     "import os\n",
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -199,13 +199,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "aavnuByVymwK"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Length of text: 1115394 characters\n"
+     ]
+    }
+   ],
    "source": [
     "# Read, then decode for py2 compat.\n",
     "text = open(path_to_file, 'rb').read().decode(encoding = \"ISO-8859-1\")\n",
@@ -215,13 +223,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "Duhg9NrUymwO"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First Citizen:\n",
+      "Before we proceed any further, hear me speak.\n",
+      "\n",
+      "All:\n",
+      "Speak, speak.\n",
+      "\n",
+      "First Citizen:\n",
+      "You are all resolved rather to die than to famish?\n",
+      "\n",
+      "All:\n",
+      "Resolved. resolved.\n",
+      "\n",
+      "First Citizen:\n",
+      "First, you know Caius Marcius is chief enemy to the people.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Take a look at the first 250 characters in text\n",
     "print(text[:250])"
@@ -229,13 +259,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "IlCgQBRVymwR"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "65 unique characters\n"
+     ]
+    }
+   ],
    "source": [
     "# The unique characters in the file\n",
     "vocab = sorted(set(text))\n",
@@ -266,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -293,13 +331,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "FYyNlCNXymwY"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  '\\n':   0,\n",
+      "  ' ' :   1,\n",
+      "  '!' :   2,\n",
+      "  '$' :   3,\n",
+      "  '&' :   4,\n",
+      "  \"'\" :   5,\n",
+      "  ',' :   6,\n",
+      "  '-' :   7,\n",
+      "  '.' :   8,\n",
+      "  '3' :   9,\n",
+      "  ':' :  10,\n",
+      "  ';' :  11,\n",
+      "  '?' :  12,\n",
+      "  'A' :  13,\n",
+      "  'B' :  14,\n",
+      "  'C' :  15,\n",
+      "  'D' :  16,\n",
+      "  'E' :  17,\n",
+      "  'F' :  18,\n",
+      "  'G' :  19,\n",
+      "  ...\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
     "print('{')\n",
     "for char,_ in zip(char2idx, range(20)):\n",
@@ -309,13 +377,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "l1VKcQHcymwb"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'First Citizen' ---- characters mapped to int ---- > [18 47 56 57 58  1 15 47 58 47 64 43 52]\n"
+     ]
+    }
+   ],
    "source": [
     "# Show how the first 13 characters from the text are mapped to integers\n",
     "print ('{} ---- characters mapped to int ---- > {}'.format(repr(text[:13]), text_as_int[:13]))"
@@ -363,13 +439,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "0UHJDA39zf-O"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "F\n",
+      "i\n",
+      "r\n",
+      "s\n",
+      "t\n"
+     ]
+    }
+   ],
    "source": [
     "# The maximum length sentence we want for a single input in characters\n",
     "seq_length = 100\n",
@@ -394,13 +482,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "l4hkDU3i7ozi"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'First Citizen:\\nBefore we proceed any further, hear me speak.\\n\\nAll:\\nSpeak, speak.\\n\\nFirst Citizen:\\nYou '\n",
+      "'are all resolved rather to die than to famish?\\n\\nAll:\\nResolved. resolved.\\n\\nFirst Citizen:\\nFirst, you k'\n",
+      "\"now Caius Marcius is chief enemy to the people.\\n\\nAll:\\nWe know't, we know't.\\n\\nFirst Citizen:\\nLet us ki\"\n",
+      "\"ll him, and we'll have corn at our own price.\\nIs't a verdict?\\n\\nAll:\\nNo more talking on't; let it be d\"\n",
+      "'one: away, away!\\n\\nSecond Citizen:\\nOne word, good citizens.\\n\\nFirst Citizen:\\nWe are accounted poor citi'\n"
+     ]
+    }
+   ],
    "source": [
     "sequences = char_dataset.batch(seq_length+1, drop_remainder=True)\n",
     "\n",
@@ -420,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -448,13 +548,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "GNbw-iR0ymwj"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input data:  'First Citizen:\\nBefore we proceed any further, hear me speak.\\n\\nAll:\\nSpeak, speak.\\n\\nFirst Citizen:\\nYou'\n",
+      "Target data: 'irst Citizen:\\nBefore we proceed any further, hear me speak.\\n\\nAll:\\nSpeak, speak.\\n\\nFirst Citizen:\\nYou '\n"
+     ]
+    }
+   ],
    "source": [
     "for input_example, target_example in  dataset.take(1):\n",
     "  print ('Input data: ', repr(''.join(idx2char[input_example.numpy()])))\n",
@@ -473,13 +582,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "0eBu9WZG84i0"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Step    0\n",
+      "  input: 18 ('F')\n",
+      "  expected output: 47 ('i')\n",
+      "Step    1\n",
+      "  input: 47 ('i')\n",
+      "  expected output: 56 ('r')\n",
+      "Step    2\n",
+      "  input: 56 ('r')\n",
+      "  expected output: 57 ('s')\n",
+      "Step    3\n",
+      "  input: 57 ('s')\n",
+      "  expected output: 58 ('t')\n",
+      "Step    4\n",
+      "  input: 58 ('t')\n",
+      "  expected output: 1 (' ')\n"
+     ]
+    }
+   ],
    "source": [
     "for i, (input_idx, target_idx) in enumerate(zip(input_example[:5], target_example[:5])):\n",
     "    print(\"Step {:4d}\".format(i))\n",
@@ -501,13 +632,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "p2pGotuNzf-S"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<DatasetV1Adapter shapes: ((64, 100), (64, 100)), types: (tf.int64, tf.int64)>"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Batch size (number of 100 word sequences to train on)\n",
     "BATCH_SIZE = 64\n",
@@ -557,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -589,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -608,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -632,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -673,13 +815,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "C-_70kKAPrPU"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(64, 100, 65) # (batch_size, sequence_length, vocab_size)\n"
+     ]
+    }
+   ],
    "source": [
     "for input_example_batch, target_example_batch in dataset.take(1): \n",
     "  example_batch_predictions = model(input_example_batch)\n",
@@ -698,13 +848,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "vPGmAAXmVLGC"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "embedding (Embedding)        (64, None, 256)           16640     \n",
+      "_________________________________________________________________\n",
+      "cu_dnngru (CuDNNGRU)         (64, None, 1024)          3938304   \n",
+      "_________________________________________________________________\n",
+      "dense (Dense)                (64, None, 65)            66625     \n",
+      "=================================================================\n",
+      "Total params: 4,021,569\n",
+      "Trainable params: 4,021,569\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
     "model.summary()"
    ]
@@ -725,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -750,13 +921,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "YqFMUQc_UFgM"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([51, 42,  9, 23, 21, 23, 51, 47, 19, 23, 21, 37, 20, 36, 60, 55, 35,\n",
+       "       24, 52,  2, 55, 17, 12, 33, 54, 26, 37,  5, 51, 20, 41, 61, 49, 58,\n",
+       "       14, 52,  5,  0,  1, 54, 33, 41, 43, 20, 61,  4, 46, 22, 59, 38,  5,\n",
+       "       18, 52, 21, 26, 15, 39, 15, 53, 57, 26, 59, 59, 53, 12,  8, 16, 56,\n",
+       "       35,  8, 62, 41, 51, 36, 18,  3, 46, 63, 58, 25, 41, 18, 46,  9, 19,\n",
+       "       62, 18, 19, 55,  3, 26,  4, 33, 26, 54,  1, 64,  0, 58, 60])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sampled_indices"
    ]
@@ -773,13 +960,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "xWcFwPwLSo05"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input: \n",
+      " \"t, what, what!\\nI shall be loved when I am lack'd. Nay, mother.\\nResume that spirit, when you were won\"\n",
+      "\n",
+      "Next Char Predictions: \n",
+      " \"md3KIKmiGKIYHXvqWLn!qE?UpNY'mHcwktBn'\\n pUceHw&hJuZ'FnINCaCosNuuo?.DrW.xcmXF$hytMcFh3GxFGq$N&UNp z\\ntv\"\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Input: \\n\", repr(\"\".join(idx2char[input_example_batch[0]])))\n",
     "print()\n",
@@ -830,13 +1029,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "4HrXTACTdzY-"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prediction shape:  (64, 100, 65)  # (batch_size, sequence_length, vocab_size)\n",
+      "scalar_loss:       4.1736236\n"
+     ]
+    }
+   ],
    "source": [
     "def loss(labels, logits):\n",
     "  return tf.keras.losses.sparse_categorical_crossentropy(labels, logits, from_logits=True)\n",
@@ -860,7 +1068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -895,7 +1103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -936,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -949,13 +1157,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "UK-hmKjYVoll"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/3\n",
+      "174/174 [==============================] - 10s 58ms/step - loss: 2.6991\n",
+      "Epoch 2/3\n",
+      "174/174 [==============================] - 8s 45ms/step - loss: 1.9411\n",
+      "Epoch 3/3\n",
+      "174/174 [==============================] - 7s 43ms/step - loss: 1.6800\n"
+     ]
+    }
+   ],
    "source": [
     "history = model.fit(dataset.repeat(), epochs=EPOCHS, steps_per_epoch=steps_per_epoch, callbacks=[checkpoint_callback])"
    ]
@@ -996,20 +1217,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "zk2WJ2-XjkGz"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'./training/ckpt_3'"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "tf.train.latest_checkpoint(checkpoint_dir)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1026,13 +1258,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "71xa6jnYVrAN"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_1\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "embedding_1 (Embedding)      (1, None, 256)            16640     \n",
+      "_________________________________________________________________\n",
+      "cu_dnngru_1 (CuDNNGRU)       (1, None, 1024)           3938304   \n",
+      "_________________________________________________________________\n",
+      "dense_1 (Dense)              (1, None, 65)             66625     \n",
+      "=================================================================\n",
+      "Total params: 4,021,569\n",
+      "Trainable params: 4,021,569\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
     "model.summary()"
    ]
@@ -1064,7 +1317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1094,6 +1347,7 @@
     "  model.reset_states()\n",
     "  for i in range(num_generate):\n",
     "      predictions = model(input_eval)\n",
+    "        \n",
     "      # remove the batch dimension\n",
     "      predictions = tf.squeeze(predictions, 0)\n",
     "\n",
@@ -1112,13 +1366,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "ktovv0RFhrkn"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Logging before flag parsing goes to stderr.\n",
+      "W1007 11:43:44.319431 140487224571712 deprecation.py:323] From <ipython-input-32-49ee9b074918>:29: multinomial (from tensorflow.python.ops.random_ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use `tf.random.categorical` instead.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ROMEO:\n",
+      "Youre! Signiar Caufus commo\n",
+      "To our the princeed his consuburuth'desond, war any therefore, Prowns it not you\n",
+      "Nothingus he my weppition marry:\n",
+      "This me to as each o' the a riffor'd lifa, Romel, woo.\n",
+      "\n",
+      "COPULIO:\n",
+      "To her and scear may: to beself I well.\n",
+      "\n",
+      "CLAFEN:\n",
+      "Bine for bode their offech you; Bopens mad!\n",
+      "He to yet's vistomest the queen,\n",
+      "With mothe is to Romeo, I poor reso'se on heave,'rest.\n",
+      "\n",
+      "Mutrand:\n",
+      "O fire think thee props fanch of wrets of XINGLOUSK:\n",
+      "Why, therefore not bran-was anvite of Jaulinata,\n",
+      "And that the wime I chear, as a foul come.\n",
+      "\n",
+      "ESCoLLO:\n",
+      "So, in yep vicgarelain's gracious of here newsice.\n",
+      "Mare instructed canes too? our, what secreaded\n",
+      "O death, and betue aron here,\n",
+      "To prove the draitious as Buture ttry flants.\n",
+      "\n",
+      "Show now fellom you?\n",
+      "\n",
+      "LeDIO:\n",
+      "Sund.\n",
+      "\n",
+      "CORINIUS: we morew, the queen of swary breathed\n",
+      "To seee full goven and your lead with our arms,\n",
+      "Wist what's nate ateeched crain.\n",
+      "\n",
+      "CLARENCE:\n",
+      "Thy brother, tarrod'd, if:\n",
+      "This to thy bown fart,\n",
+      "The gods, God less ty been doye, you moth me\n"
+     ]
+    }
+   ],
    "source": [
     "print(generate_text(model, start_string=u\"ROMEO\"))\n"
    ]
