updated finetuning and exploration

--- a/week02/gpt-2-finetuning.ipynb
+++ b/week02/gpt-2-finetuning.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Fine-tuning the GPT-2 Model \n",
+    "# Fine-Tuning the GPT-2 Model \n",
     "\n",
     "This notebook explores the GPT-2 model released by OpenAI on February 14th, 2019. This blog post 'Better Language Models and Their Implications' https://openai.com/blog/better-language-models/, discusses the project.\n",
     "\n",
@@ -21,14 +21,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Fine-tuning\n",
-    "\n",
+    "## Fine-Tuning vs. Retraining\n",
     "\n",
     "Training a 1.5B parameter model requires an enormous corpus of text (8M webpages yielding 40GB of plain text). Even with a reduced 117M parameter GPT-2, training this architecture on a small dataset (where data is smaller than the number of parameters) reduces the networks ability to generalize and likely results in overfitting. Fine-tuning a network means taking that high-parameter, pretrained network, and continuing training (via backpropagation) with our new, smaller dataset. The caveat here is that the new dataset needs to resemble/be similar in kind to the original training data.\n",
     "\n",
     "Even if we wanted to train GPT-2 architecture from scratch, OpenAI has not provided access to the training data or training code.\n",
     "\n",
-    "The code below wraps up a gpt-2 fine-tuning process in a very simple interface."
+    "The example below wraps up the gpt-2 fine-tuning process in a very simple interface, installed via pip."
    ]
   },
   {
@@ -43,7 +42,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "import gpt_2_simple as gpt2\n",
@@ -64,16 +65,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Reference\n",
-    "- Example is from [https://github.com/minimaxir/gpt-2-simple](https://github.com/minimaxir/gpt-2-simple). "
+    "## Activities\n",
+    "\n",
+    "- Explore different finetuning texts (of your choice) and their results.\n",
+    "  - Observe how the size of the text (num characters) relate to the number of parameters of the GPT-2 model you are working with.\n",
+    "  - Observe the loss \n",
+    "  - Look for over-fitting (loss at or near 0)\n",
+    "- Try the other sizes of published models, how do they change the complexity/intelligibility of generated text:\n",
+    "  - 117M\n",
+    "  - 124M\n",
+    "  - 345M\n",
+    "  - 355M\n",
+    "  - 774M"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Reference\n",
+    "- Example is from [https://github.com/minimaxir/gpt-2-simple](https://github.com/minimaxir/gpt-2-simple). "
+   ]
   }
  ],
  "metadata": {
