gpt-2-simple only wraps two sizes

--- a/week02/gpt-2-finetuning.ipynb
+++ b/week02/gpt-2-finetuning.ipynb
@@ -71,12 +71,7 @@
     "  - Observe how the size of the text (num characters) relate to the number of parameters of the GPT-2 model you are working with.\n",
     "  - Observe the loss \n",
     "  - Look for over-fitting (loss at or near 0)\n",
-    "- Try the other sizes of published models, how do they change the complexity/intelligibility of generated text:\n",
-    "  - 117M\n",
-    "  - 124M\n",
-    "  - 345M\n",
-    "  - 355M\n",
-    "  - 774M"
+    "- Try the other sizes of published models, how do they change the complexity/intelligibility of generated text. gpt_2_simple wraps the \"small\" 124M and \"medium\" 355M models."
    ]
   },
   {
