--- a/week3/Autoencoders.ipynb
+++ b/week3/Autoencoders.ipynb
@@ -182,7 +182,7 @@
     "\n",
     "n_inputs = 28 * 28    # Required by MNIST\n",
     "n_hidden1 = 300\n",
-    "n_hidden2 = 2#20#150       # Middle layer\n",
+    "n_hidden2 = 150       # Middle layer\n",
     "n_hidden3 = n_hidden1\n",
     "n_outputs = n_inputs\n",
     "\n",
@@ -221,7 +221,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_epochs = 20#5\n",
+    "n_epochs = 5\n",
     "batch_size = 150\n",
     "\n",
     "with tf.Session() as sess:\n",
