updated text_gen_RNN for TF2

--- a/week02/Text_Generation_RNN.ipynb
+++ b/week02/Text_Generation_RNN.ipynb
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -447,6 +447,14 @@
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-01-12 18:19:40.315843: I tensorflow/core/platform/cpu_feature_guard.cc:142] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  SSE4.1 SSE4.2 AVX AVX2 AVX512F FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -455,6 +463,13 @@
       "r\n",
       "s\n",
       "t\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-01-12 18:19:41.387036: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1510] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 30979 MB memory:  -> device: 0, name: Tesla V100S-PCIE-32GB, pci bus id: 0000:60:00.0, compute capability: 7.0\n"
      ]
     }
    ],
@@ -562,6 +577,13 @@
       "Input data:  'First Citizen:\\nBefore we proceed any further, hear me speak.\\n\\nAll:\\nSpeak, speak.\\n\\nFirst Citizen:\\nYou'\n",
       "Target data: 'irst Citizen:\\nBefore we proceed any further, hear me speak.\\n\\nAll:\\nSpeak, speak.\\n\\nFirst Citizen:\\nYou '\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-01-12 18:19:43.009815: I tensorflow/compiler/mlir/mlir_graph_optimization_pass.cc:185] None of the MLIR Optimization Passes are enabled (registered 2)\n"
+     ]
     }
    ],
    "source": [
@@ -642,7 +664,7 @@
     {
      "data": {
       "text/plain": [
-       "<DatasetV1Adapter shapes: ((64, 100), (64, 100)), types: (tf.int64, tf.int64)>"
+       "<BatchDataset shapes: ((64, 100), (64, 100)), types: (tf.int64, tf.int64)>"
       ]
      },
      "execution_count": 14,
@@ -731,17 +753,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "wjKZrC39ELy0"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-01-12 18:20:51.769942: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1510] Created device /device:GPU:0 with 30979 MB memory:  -> device: 0, name: Tesla V100S-PCIE-32GB, pci bus id: 0000:60:00.0, compute capability: 7.0\n"
+     ]
+    }
+   ],
    "source": [
     "if tf.test.is_gpu_available():\n",
-    "  rnn = tf.keras.layers.CuDNNGRU\n",
-    "  rnn2 = tf.keras.layers.CuDNNGRU\n",
+    "  rnn = tf.keras.layers.GRU\n",
+    "  rnn2 = tf.keras.layers.GRU\n",
     "else:\n",
     "  import functools\n",
     "  rnn = functools.partial(\n",
@@ -750,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -774,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -815,13 +845,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "C-_70kKAPrPU"
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-01-12 18:21:02.995715: I tensorflow/stream_executor/cuda/cuda_dnn.cc:369] Loaded cuDNN version 8201\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -848,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -865,7 +902,7 @@
       "=================================================================\n",
       "embedding (Embedding)        (64, None, 256)           16640     \n",
       "_________________________________________________________________\n",
-      "cu_dnngru (CuDNNGRU)         (64, None, 1024)          3938304   \n",
+      "gru (GRU)                    (64, None, 1024)          3938304   \n",
       "_________________________________________________________________\n",
       "dense (Dense)                (64, None, 65)            66625     \n",
       "=================================================================\n",
@@ -896,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -921,7 +958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -931,15 +968,15 @@
     {
      "data": {
       "text/plain": [
-       "array([51, 42,  9, 23, 21, 23, 51, 47, 19, 23, 21, 37, 20, 36, 60, 55, 35,\n",
-       "       24, 52,  2, 55, 17, 12, 33, 54, 26, 37,  5, 51, 20, 41, 61, 49, 58,\n",
-       "       14, 52,  5,  0,  1, 54, 33, 41, 43, 20, 61,  4, 46, 22, 59, 38,  5,\n",
-       "       18, 52, 21, 26, 15, 39, 15, 53, 57, 26, 59, 59, 53, 12,  8, 16, 56,\n",
-       "       35,  8, 62, 41, 51, 36, 18,  3, 46, 63, 58, 25, 41, 18, 46,  9, 19,\n",
-       "       62, 18, 19, 55,  3, 26,  4, 33, 26, 54,  1, 64,  0, 58, 60])"
+       "array([18, 41, 43, 52, 25, 44, 50, 21, 58, 51,  6, 14, 40, 19, 26, 38,  0,\n",
+       "       56, 43, 49, 20, 13,  7, 52, 39, 15, 20, 53, 14, 10, 51, 55, 31, 28,\n",
+       "       37, 22, 34, 59, 51, 20, 14, 21, 27, 56, 12, 17, 11, 32, 10,  6, 26,\n",
+       "       54, 24, 55, 15, 22, 10, 29, 33,  8, 18, 13, 10, 11, 45, 61, 17, 39,\n",
+       "       63, 17, 33, 57, 41, 11, 17, 50, 11, 53,  7, 18, 41, 51, 24, 10, 17,\n",
+       "        3, 59,  0, 32, 56, 62, 54, 25, 51, 60, 35, 60, 57, 25, 53])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -960,7 +997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -972,10 +1009,10 @@
      "output_type": "stream",
      "text": [
       "Input: \n",
-      " \"t, what, what!\\nI shall be loved when I am lack'd. Nay, mother.\\nResume that spirit, when you were won\"\n",
+      " 'etly, alone.\\n\\nBRAKENBURY:\\nWhat one, my lord?\\n\\nGLOUCESTER:\\nHer husband, knave: wouldst thou betray me'\n",
       "\n",
       "Next Char Predictions: \n",
-      " \"md3KIKmiGKIYHXvqWLn!qE?UpNY'mHcwktBn'\\n pUceHw&hJuZ'FnINCaCosNuuo?.DrW.xcmXF$hytMcFh3GxFGq$N&UNp z\\ntv\"\n"
+      " 'FcenMflItm,BbGNZ\\nrekHA-naCHoB:mqSPYJVumHBIOr?E;T:,NpLqCJ:QU.FA:;gwEayEUsc;El;o-FcmL:E$u\\nTrxpMmvWvsMo'\n"
      ]
     }
    ],
@@ -1029,7 +1066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1041,7 +1078,7 @@
      "output_type": "stream",
      "text": [
       "Prediction shape:  (64, 100, 65)  # (batch_size, sequence_length, vocab_size)\n",
-      "scalar_loss:       4.1736236\n"
+      "scalar_loss:       4.175539\n"
      ]
     }
    ],
@@ -1068,7 +1105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1077,7 +1114,7 @@
    "outputs": [],
    "source": [
     "model.compile(\n",
-    "    optimizer = tf.train.AdamOptimizer(),\n",
+    "    optimizer = tf.optimizers.Adam(),\n",
     "    loss = loss)"
    ]
   },
@@ -1103,7 +1140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1144,7 +1181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1157,7 +1194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1169,11 +1206,11 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/3\n",
-      "174/174 [==============================] - 10s 58ms/step - loss: 2.6991\n",
+      "174/174 [==============================] - 6s 27ms/step - loss: 2.6470\n",
       "Epoch 2/3\n",
-      "174/174 [==============================] - 8s 45ms/step - loss: 1.9411\n",
+      "174/174 [==============================] - 5s 27ms/step - loss: 1.9476\n",
       "Epoch 3/3\n",
-      "174/174 [==============================] - 7s 43ms/step - loss: 1.6800\n"
+      "174/174 [==============================] - 5s 27ms/step - loss: 1.6812\n"
      ]
     }
    ],
@@ -1217,7 +1254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1230,7 +1267,7 @@
        "'./training/ckpt_3'"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1241,7 +1278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1258,7 +1295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1275,7 +1312,7 @@
       "=================================================================\n",
       "embedding_1 (Embedding)      (1, None, 256)            16640     \n",
       "_________________________________________________________________\n",
-      "cu_dnngru_1 (CuDNNGRU)       (1, None, 1024)           3938304   \n",
+      "gru_1 (GRU)                  (1, None, 1024)           3938304   \n",
       "_________________________________________________________________\n",
       "dense_1 (Dense)              (1, None, 65)             66625     \n",
       "=================================================================\n",
@@ -1317,7 +1354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 40,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1353,7 +1390,7 @@
     "\n",
     "      # using a multinomial distribution to predict the word returned by the model\n",
     "      predictions = predictions / temperature\n",
-    "      predicted_id = tf.multinomial(predictions, num_samples=1)[-1,0].numpy()\n",
+    "      predicted_id = tf.random.categorical(predictions, num_samples=1)[-1,0].numpy()\n",
     "      \n",
     "      # We pass the predicted word as the next input to the model\n",
     "      # along with the previous hidden state\n",
@@ -1366,7 +1403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 41,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1374,57 +1411,60 @@
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: Logging before flag parsing goes to stderr.\n",
-      "W1007 11:43:44.319431 140487224571712 deprecation.py:323] From <ipython-input-32-49ee9b074918>:29: multinomial (from tensorflow.python.ops.random_ops) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Use `tf.random.categorical` instead.\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "ROMEO:\n",
-      "Youre! Signiar Caufus commo\n",
-      "To our the princeed his consuburuth'desond, war any therefore, Prowns it not you\n",
-      "Nothingus he my weppition marry:\n",
-      "This me to as each o' the a riffor'd lifa, Romel, woo.\n",
+      "Citizen: ay may censerman:\n",
+      "He gearle.\n",
       "\n",
-      "COPULIO:\n",
-      "To her and scear may: to beself I well.\n",
+      "AMTONIO:\n",
+      "Inoungs thy traitons serst up, and your wool!\n",
       "\n",
-      "CLAFEN:\n",
-      "Bine for bode their offech you; Bopens mad!\n",
-      "He to yet's vistomest the queen,\n",
-      "With mothe is to Romeo, I poor reso'se on heave,'rest.\n",
+      "POMIXENAS:\n",
+      "No loy good mort not\n",
+      "Madcy to Citizen\n",
+      "Come, sim?\n",
+      "But thou mauntitn glast her, with haveme thumourness.\n",
       "\n",
-      "Mutrand:\n",
-      "O fire think thee props fanch of wrets of XINGLOUSK:\n",
-      "Why, therefore not bran-was anvite of Jaulinata,\n",
-      "And that the wime I chear, as a foul come.\n",
+      "POMPEY:\n",
+      "I from. But is is\n",
+      "I know it not this whe hathers in moneraig, what the dide!\n",
       "\n",
-      "ESCoLLO:\n",
-      "So, in yep vicgarelain's gracious of here newsice.\n",
-      "Mare instructed canes too? our, what secreaded\n",
-      "O death, and betue aron here,\n",
-      "To prove the draitious as Buture ttry flants.\n",
+      "HENRY BOLINGBROCK:\n",
+      "To this is ever?\n",
       "\n",
-      "Show now fellom you?\n",
+      "First To well gentleman;\n",
+      "It I modnt so.\n",
       "\n",
-      "LeDIO:\n",
-      "Sund.\n",
+      "MERCUTIO:\n",
+      "Madabll; seem or sued.\n",
       "\n",
-      "CORINIUS: we morew, the queen of swary breathed\n",
-      "To seee full goven and your lead with our arms,\n",
-      "Wist what's nate ateeched crain.\n",
+      "SICINIUS:\n",
+      "Ped, my loss at ele.\n",
       "\n",
-      "CLARENCE:\n",
-      "Thy brother, tarrod'd, if:\n",
-      "This to thy bown fart,\n",
-      "The gods, God less ty been doye, you moth me\n"
+      "PETRUCHIO:\n",
+      "Yet, non me: you shalt the solless:\n",
+      "And ler bo stire do to timer futh he orce.\n",
+      "\n",
+      "LEONTES:\n",
+      "Yet good from you, what your kill'd you then was\n",
+      "come and failt, and let he ghat Strubately?\n",
+      "\n",
+      "CLASEY:\n",
+      "To;\n",
+      "My ageinghy my sheet,\n",
+      "Therbore say now in have your hown\n",
+      "Wools holdee offort commings my salten's pryeass.\n",
+      "Unus nor doing up:\n",
+      "And blend usce do believem unco with be mothers list I seep?\n",
+      "\n",
+      "WARWICK:\n",
+      "God! my lord,\n",
+      "You berieve, 'tis you tell yet sowerey,\n",
+      "Murry youl good teath speak undle lieted yet, and rivon:\n",
+      "Be it usoney hilterends thing\n",
+      "And tay sond m\n"
      ]
     }
    ],
@@ -1484,9 +1524,9 @@
    "version": "0.3.2"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "TensorFlow GPU 2.6 (py39)",
    "language": "python",
-   "name": "python3"
+   "name": "tensorflow-gpu-2.6-py39"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1498,7 +1538,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
