--- a/week01/Text_Generation_RNN.ipynb
+++ b/week01/Text_Generation_RNN.ipynb
@@ -9,9 +9,9 @@
    "source": [
     "# Text generation with an RNN\n",
     "\n",
-    "Adapted from the [tensorflow example](https://www.tensorflow.org/tutorials/sequences/text_generation), to run on [datahub.ucsd.edu](datahub.ucsd.edu), with TF 1.14. \n",
+    "Adapted from the [tensorflow example](https://www.tensorflow.org/tutorials/sequences/text_generation), to run on [https://crane-ood.unl.edu/](https://crane-ood.unl.edu/).\n",
     "\n",
-    "Robert Twomey, rtwomey@ucsd.edu."
+    "Robert Twomey, rtwomey@unl.edu."
    ]
   },
   {
