--- a/gpt2-generate-finetune.ipynb
+++ b/gpt2-generate-finetune.ipynb
@@ -6,22 +6,31 @@
     "id": "H7LoMj4GA4n_"
    },
    "source": [
-    "#  Train a GPT-2 Text-Generating Model w/ GPU For Free \n",
+    "#  GPT-2 Generation and Fine-Tuning\n",
     "\n",
-    "by [Max Woolf](http://minimaxir.com)\n",
+    "This notebook explores GPT-2 (Generative Pretrained Transformer-2) from OpenAI. Read more about it [here](https://openai.com/blog/better-language-models/).\n",
     "\n",
-    "*Last updated: October 17th, 2021*\n",
+    "Activities include:\n",
     "\n",
-    "Retrain an advanced text generating neural network on any text dataset **for free on a GPU using Collaboratory** using `gpt-2-simple`!\n",
+    "0. Setup\n",
+    "1. Generate samples from pre-trained gpt-3 model\n",
+    "2. Fine-tune gpt-2 on text of your choosing. \n",
     "\n",
-    "For more about `gpt-2-simple`, you can visit [this GitHub repository](https://github.com/minimaxir/gpt-2-simple). You can also read my [blog post](https://minimaxir.com/2019/09/howto-gpt2/) for more information how to use this notebook!\n",
-    "\n",
-    "\n",
-    "To get started:\n",
-    "\n",
-    "1. Copy this notebook to your Google Drive to keep it and save your changes. (File -> Save a Copy in Drive)\n",
-    "2. Make sure you're running the notebook in Google Chrome.\n",
-    "3. Run the cells below:\n"
+    "Adapted by Robert Twomey (rtwomey@unl.edu) from [gpt-2-simple](https://github.com/minimaxir/gpt-2-simple) by [Max Woolf](http://minimaxir.com) for Machine Learning for the Arts SP22."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 0. Setup"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "install the library"
    ]
   },
   {
@@ -31,6 +40,13 @@
    "outputs": [],
    "source": [
     "%pip install -q gpt-2-simple"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "restart the kernel and run the imports"
    ]
   },
   {
@@ -75,6 +91,14 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "note the memory usage (0MiB / 32510MiB) for the Tesla V100.\n",
+    "You can re-rerun the above cell to see what memory your code/models are using during training."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "0wXB05bPDYxS"
    },
@@ -92,9 +116,7 @@
     "\n",
     "Larger models have more knowledge, but take longer to finetune and longer to generate text. You can specify which base model to use by changing `model_name` in the cells below.\n",
     "\n",
-    "The next cell downloads it from Google Cloud Storage and saves it in the Colaboratory VM at `/models/<model_name>`.\n",
-    "\n",
-    "This model isn't permanently saved in the Colaboratory VM; you'll have to redownload it if you want to retrain it at a later time."
+    "The next cell downloads it from Google Cloud Storage and saves it in the the current working directory at `/models/<model_name>`."
    ]
   },
   {
@@ -116,25 +138,101 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "N8KXuKWzQSsN"
+    "id": "QQAN3M6RT7Kj"
    },
    "source": [
-    "~~## Mounting Google Drive~~\n",
+    "## 1. Generate Text From The Pretrained Model\n",
     "\n",
-    "~~The best way to get input text to-be-trained into the Colaboratory VM, and to get the trained model *out* of Colaboratory, is to route it through Google Drive *first*.~~\n",
+    "If you want to generate text from the pretrained model, not a finetuned model, pass `model_name` to `gpt2.load_gpt2()` and `gpt2.generate()`.\n",
     "\n",
-    "~~Running this cell (which will only work in Colaboratory) will mount your personal Google Drive in the VM, which later cells can use to get data in/out. (it will ask for an auth code; that auth is not saved anywhere)~~"
+    "This is currently the only way to generate text from the 774M or 1558M models with this notebook."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "id": "puq4iC6vUAHc"
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 158
+    },
+    "id": "hsUd_jHgUZnD",
+    "outputId": "4e0c8a3f-3527-41c4-e3fe-3357f3f8f6c2"
    },
    "outputs": [],
    "source": [
-    "#gpt2.mount_gdrive()"
+    "model_name = \"774M\"\n",
+    "# gpt2.download_gpt2(model_name=model_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 124
+    },
+    "id": "BAe4NpKNUj2C",
+    "outputId": "b09bfe1d-2ff8-4b8a-fffb-273d28d5d4ae"
+   },
+   "outputs": [],
+   "source": [
+    "sess = gpt2.start_tf_sess()\n",
+    "\n",
+    "gpt2.load_gpt2(sess, model_name=model_name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The follow cell samples from gpt-2, using the provided prefix (seed) and other parameters. Start the TF session and generate text from the model. \n",
+    "\n",
+    "Try changing the paramaters below to change the output: \n",
+    "- `prefix` is the prompt. This will be the starting string/seed for your generation. Use your own text. \n",
+    "- `temperature` sets the variability/randomness of the output. Range 0.0-1.0\n",
+    "- `length` sets the lenght of output (in tokens). max is 1024.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 797
+    },
+    "id": "-xInIZKaU104",
+    "outputId": "56348e28-7d08-45e3-c859-f26c0efd066d"
+   },
+   "outputs": [],
+   "source": [
+    "gpt2.generate(sess,\n",
+    "              model_name=model_name,\n",
+    "              prefix=\"The secret of life is\",\n",
+    "              length=100,\n",
+    "              temperature=0.7,\n",
+    "              top_p=0.9,\n",
+    "              nsamples=5,\n",
+    "              batch_size=5\n",
+    "              )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2. Fine-Tuning GPT-2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "HeeSKtNWUedE"
+   },
+   "source": [
+    "For this, we will use a text file you provide to fine-tune (continue training) GPT-2."
    ]
   },
   {
@@ -145,11 +243,9 @@
    "source": [
     "## Uploading a Text File to be Trained to Colaboratory\n",
     "\n",
-    "In the Colaboratory Notebook sidebar on the left of the screen, select *Files*. From there you can upload files:\n",
+    "You can use any plain text (.txt) file. Simply drag and dropy our text file into the file browser at left. \n",
     "\n",
-    "![alt text](https://i.imgur.com/TGcZT4h.png)\n",
-    "\n",
-    "Upload **any smaller text file**  (<10 MB) and update the file name in the cell below, then run the cell."
+    "Once you have uploaded your file, update the file name in the cell below, then run the cell."
    ]
   },
   {
@@ -161,26 +257,6 @@
    "outputs": [],
    "source": [
     "file_name = \"script.txt\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "HeeSKtNWUedE"
-   },
-   "source": [
-    "If your text file is larger than 10MB, it is recommended to upload that file to Google Drive first, then copy that file from Google Drive to the Colaboratory VM."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "-Z6okFD8VKtS"
-   },
-   "outputs": [],
-   "source": [
-    "#gpt2.copy_file_from_gdrive(file_name)"
    ]
   },
   {
@@ -222,15 +298,17 @@
    },
    "outputs": [],
    "source": [
+    "model_name = \"774M\"\n",
     "sess = gpt2.start_tf_sess()\n",
     "\n",
     "gpt2.finetune(sess,\n",
     "              dataset=file_name,\n",
-    "              model_name=this_model,\n",
+    "              model_name=model_name,\n",
     "              steps=1000,\n",
     "              restore_from='fresh',\n",
     "              run_name='run1',\n",
     "              print_every=10,\n",
+    "              learning_rate=1e-5,\n",
     "              sample_every=200,\n",
     "              save_every=500\n",
     "              )"
@@ -242,7 +320,7 @@
     "id": "IXSuTNERaw6K"
    },
    "source": [
-    "After the model is trained, you can copy the checkpoint folder to your own Google Drive.\n",
+    "After the model is trained, you can download the checkpoint folder to save your work.\n",
     "\n",
     "If you want to download it to your personal computer, it's strongly recommended you copy it there first, then download from Google Drive. The checkpoint folder is copied as a `.rar` compressed file; you can download it and uncompress it locally."
    ]
@@ -439,79 +517,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "QQAN3M6RT7Kj"
-   },
-   "source": [
-    "## Generate Text From The Pretrained Model\n",
-    "\n",
-    "If you want to generate text from the pretrained model, not a finetuned model, pass `model_name` to `gpt2.load_gpt2()` and `gpt2.generate()`.\n",
-    "\n",
-    "This is currently the only way to generate text from the 774M or 1558M models with this notebook."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 158
-    },
-    "id": "hsUd_jHgUZnD",
-    "outputId": "4e0c8a3f-3527-41c4-e3fe-3357f3f8f6c2"
-   },
-   "outputs": [],
-   "source": [
-    "model_name = \"774M\"\n",
-    "\n",
-    "gpt2.download_gpt2(model_name=model_name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 124
-    },
-    "id": "BAe4NpKNUj2C",
-    "outputId": "b09bfe1d-2ff8-4b8a-fffb-273d28d5d4ae"
-   },
-   "outputs": [],
-   "source": [
-    "sess = gpt2.start_tf_sess()\n",
-    "\n",
-    "gpt2.load_gpt2(sess, model_name=model_name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 797
-    },
-    "id": "-xInIZKaU104",
-    "outputId": "56348e28-7d08-45e3-c859-f26c0efd066d"
-   },
-   "outputs": [],
-   "source": [
-    "gpt2.generate(sess,\n",
-    "              model_name=model_name,\n",
-    "              prefix=\"The secret of life is\",\n",
-    "              length=100,\n",
-    "              temperature=0.7,\n",
-    "              top_p=0.9,\n",
-    "              nsamples=5,\n",
-    "              batch_size=5\n",
-    "              )"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
     "id": "ig-KVgkCDCKD"
    },
    "source": [
@@ -537,7 +542,7 @@
     "id": "wmTXWNUygS5E"
    },
    "source": [
-    "# LICENSE\n",
+    "# License\n",
     "\n",
     "MIT License\n",
     "\n",
@@ -561,6 +566,22 @@
     "OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE\n",
     "SOFTWARE."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Reference\n",
+    "- Max's [blog post](https://minimaxir.com/2019/09/howto-gpt2/) for more information how to use this notebook!\n",
+    "- Original repo: [gpt-2-simple](https://github.com/minimaxir/gpt-2-simple) by [Max Woolf](http://minimaxir.com). "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
